--- a/again-starter/pom.xml
+++ b/again-starter/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>again-spring-boot-start-datasource</module>
+        <module>again-spring-boot-starter-elasticsearch</module>
     </modules>
 
 
