--- a/again-cloud-web/src/main/resources/application.yml
+++ b/again-cloud-web/src/main/resources/application.yml
@@ -1,5 +1,13 @@
 server:
   port: 20003
+again:
+  websocket:
+    netty:
+      leak_detector_level: DISABLED
+      boss_group_thread_count: 1
+      worker_group_thread_count: 12
+      max_payload_size: 65536
+      bind_port: 20004
 spring:
   datasource:
     password: root
