--- a/again-starter/pom.xml
+++ b/again-starter/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>again-spring-boot-start-datasource</module>
         <module>again-spring-boot-starter-elasticsearch</module>
+        <module>again-spring-boot-starter-storage</module>
     </modules>
 
 
