--- a/again-cloud-web/pom.xml
+++ b/again-cloud-web/pom.xml
@@ -43,6 +43,10 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.again</groupId>
+            <artifactId>again-spring-boot-starter-storage</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
