--- a/again-cloud-dependencies/pom.xml
+++ b/again-cloud-dependencies/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.again</groupId>
     <version>${revision}</version>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>pom</packaging>
     <description>统一依赖管理</description>
 
     <properties>
@@ -24,6 +24,7 @@
         <dynamic-datasource.version>3.2.0</dynamic-datasource.version>
         <hutool.version>5.4.1</hutool.version>
         <oss.aliyun.version>3.8.0</oss.aliyun.version>
+        <spring-boot.version>2.1.9.RELEASE</spring-boot.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -91,12 +92,12 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-configuration-processor</artifactId>
-                <version>2.4.0</version>
+                <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-autoconfigure</artifactId>
-                <version>2.4.0</version>
+                <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.jsqlparser</groupId>
