--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
             <dependency>
                 <groupId>com.again</groupId>
                 <artifactId>again-cloud-dependencies</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>${revision}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
