--- a/again-cloud-dependencies/pom.xml
+++ b/again-cloud-dependencies/pom.xml
@@ -28,6 +28,12 @@
     </properties>
     <dependencyManagement>
         <dependencies>
+            <!--common modules-->
+            <dependency>
+                <groupId>com.again</groupId>
+                <artifactId>again-common-modules</artifactId>
+                <version>${revision}</version>
+            </dependency>
             <!-- extends-->
             <dependency>
                 <groupId>com.again</groupId>
@@ -123,7 +129,15 @@
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>${oss.aliyun.version}</version>
             </dependency>
+            <!--mq-->
+            <!--pulsar-->
+            <dependency>
+                <groupId>io.github.majusko</groupId>
+                <artifactId>pulsar-java-spring-boot-starter</artifactId>
+                <version>1.0.4</version>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <build>
