--- a/again-cloud-search/pom.xml
+++ b/again-cloud-search/pom.xml
@@ -21,7 +21,6 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
-
     <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
@@ -34,6 +33,14 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>io.github.majusko</groupId>
+        <artifactId>pulsar-java-spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.again</groupId>
+        <artifactId>again-common-modules</artifactId>
     </dependency>
 </dependencies>
 </project>
