--- a/again-cloud-web/pom.xml
+++ b/again-cloud-web/pom.xml
@@ -55,6 +55,10 @@
             <groupId>com.again</groupId>
             <artifactId>again-common-modules</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.again</groupId>
+            <artifactId>again-spring-boot-starter-kafka</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
