--- a/again-starter/pom.xml
+++ b/again-starter/pom.xml
@@ -15,6 +15,7 @@
         <module>again-spring-boot-start-datasource</module>
         <module>again-spring-boot-starter-elasticsearch</module>
         <module>again-spring-boot-starter-storage</module>
+        <module>again-spring-boot-starter-kafka</module>
     </modules>
 
 
