--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <maven-compiler-plugin.verison>3.8.0</maven-compiler-plugin.verison>
         <spring-javaformat-checkstyle.version>0.0.25</spring-javaformat-checkstyle.version>
 
+        <kafka.version>2.5.0</kafka.version>
+
         <flatten-maven-plugin.version>1.1.0</flatten-maven-plugin.version>
         <org.mapstruct.version>1.4.1.Final</org.mapstruct.version>
         <spring-boot.version>2.1.9.RELEASE</spring-boot.version>
