--- a/again-cloud-web/pom.xml
+++ b/again-cloud-web/pom.xml
@@ -59,6 +59,10 @@
             <groupId>com.again</groupId>
             <artifactId>again-spring-boot-starter-kafka</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
