--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>again-cloud-search</module>
         <module>again-common-modules</module>
         <module>auth-center</module>
+        <module>again-cloud-gateway</module>
     </modules>
 
     <packaging>pom</packaging>
