--- a/again-cloud-gateway/src/main/resources/application.yml
+++ b/again-cloud-gateway/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 spring:
   application:
     name: again-gateway
+  cloud:
+    client:
+      ipAddress: 127.0.0.1
   rabbitmq:
     host: 192.168.1.123
     port: 5672
@@ -10,14 +13,16 @@ spring:
     password: guest
 eureka:
   instance:
-    prefer-ip-address: true #当我们在eureka中点击服务的地址的时候打开的是以ip开头的
+    prefer-ip-address: false #当我们在eureka中点击服务的地址的时候打开的是以ip开头的
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
+    hostname: ${spring.cloud.client.ipAddress}
   client:
     service-url:
       defaultZone: http://localhost:20000/eureka
 zuul:
   ignored-services: '*'
-  routes:
-    again-cache: /**
+  #routes:
+    #again-cache: /**
 management:
   endpoints:
     web:
