--- a/again-cloud-dependencies/pom.xml
+++ b/again-cloud-dependencies/pom.xml
@@ -85,6 +85,11 @@
                 <version>${revision}</version>
             </dependency>
             <dependency>
+                <groupId>com.again</groupId>
+                <artifactId>again-pay-module</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-extension</artifactId>
                 <version>${mybatis-plus.version}</version>
