--- a/again-common-modules/again-pay-module/pom.xml
+++ b/again-common-modules/again-pay-module/pom.xml
@@ -3,17 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>again-cloud</artifactId>
+        <artifactId>again-common-modules</artifactId>
         <groupId>com.again</groupId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>again-common-modules</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>again-pay-module</module>
-    </modules>
+    <artifactId>again-pay-module</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.again</groupId>
+            <artifactId>again-cloud-embed</artifactId>
+        </dependency>
+    </dependencies>
 </project>
