--- a/again-cloud-web/pom.xml
+++ b/again-cloud-web/pom.xml
@@ -67,6 +67,15 @@
             <groupId>com.again</groupId>
             <artifactId>again-pay-module</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--<dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.15.5</version>
+        </dependency>-->
     </dependencies>
     <build>
         <plugins>
