--- a/again-cloud-dependencies/pom.xml
+++ b/again-cloud-dependencies/pom.xml
@@ -26,6 +26,7 @@
         <oss.aliyun.version>3.8.0</oss.aliyun.version>
         <kafka.version>2.5.0</kafka.version>
         <spring-boot.version>2.1.9.RELEASE</spring-boot.version>
+        <grpc.version>2.11.0.RELEASE</grpc.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -33,6 +34,16 @@
             <dependency>
                 <groupId>com.again</groupId>
                 <artifactId>again-common-modules</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.again</groupId>
+                <artifactId>again-cloud-common</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.again</groupId>
+                <artifactId>cloud-grpc-lib</artifactId>
                 <version>${revision}</version>
             </dependency>
             <!-- extends-->
@@ -151,6 +162,22 @@
                 <groupId>io.github.majusko</groupId>
                 <artifactId>pulsar-java-spring-boot-starter</artifactId>
                 <version>1.0.4</version>
+            </dependency>
+            <!--grpc-->
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-client-spring-boot-starter</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-spring-boot-starter</artifactId>
+                <version>${grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.devh</groupId>
+                <artifactId>grpc-server-spring-boot-starter</artifactId>
+                <version>${grpc.version}</version>
             </dependency>
         </dependencies>
 
