--- a/again-cloud-web/pom.xml
+++ b/again-cloud-web/pom.xml
@@ -73,6 +73,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.again</groupId>
+            <artifactId>cloud-grpc-lib</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-client-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
